--- a/ToDoListApp/Views/ToDoList/AddNew.cshtml
+++ b/ToDoListApp/Views/ToDoList/AddNew.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="create">
+        <form asp-action="AddNew">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
